fixed on mobile, colors and speed

--- a/styles/less/main.css
+++ b/styles/less/main.css
@@ -145,7 +145,7 @@ html {
   -webkit-transition: all .15s ease;
           transition: all .15s ease;
   box-shadow: 2px 2px 10px 0 rgba(34, 34, 34, 0.6);
-  font-size: 2.5em;
+  font-size: 2.9vw;
   line-height: 5em;
   vertical-align: middle;
   color: #f7f7f7;
